--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="ar">
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Language" content="ar">
   <link rel="icon" type="image/svg+xml" href="/public/logoss.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>دار الإتقان لتعليم القرآن</title>
